[tool.poetry]
name = "pytestcontainers"
version = "0.1.0"
description = "make containers easily available for pytest"
authors = ["Julien Rialland <julien.rialland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.0"
pytest = "^8.3.4"
asyncpg = "^0.30.0"
mypy = "^1.13.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
